@@ -1,11 +1,11 @@
-# $NetBSD: Makefile,v 1.380 2005/05/05 05:50:05 rh Exp $
+# $NetBSD: Makefile,v 1.381 2005/05/05 20:07:23 xtraeme Exp $
 #
 
 COMMENT=	Graphics tools and libraries
 
 SUBDIR+=	3DKit
-SUBDIR+=	Cenon
 SUBDIR+=	CRWInfo
+SUBDIR+=	Cenon
 SUBDIR+=	GLXKit
 SUBDIR+=	GMT
 SUBDIR+=	GUIlib
@@ -284,6 +284,7 @@ SUBDIR+=	vtk-data
 SUBDIR+=	vtk-docs
 SUBDIR+=	vtk-python
 SUBDIR+=	wmphoto
+SUBDIR+=	x11rec
 SUBDIR+=	xart
 SUBDIR+=	xbmbrowser
 SUBDIR+=	xdvipresent
